Adicionado nível de acesso : 1 e 2